# pantheon-240824-excercise

./: .pre-commit-config.yaml  pyproject.toml
pantheonexcersice/: book_actions.py  builder.py  create_db.py  dict_test.py  functions.py  library.db  models.py  tracer.py
